--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${fileDirname}",
+      "cwd": "c:\\Users\\mati\\Desktop\\tarea 3\\Tarea_3",
       "environment": [],
-      "program":"${fileDirname}\\main.exe",
+      "program": "c:\\Users\\mati\\Desktop\\tarea 3\\Tarea_3\\build\\Debug\\outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
